tests/ui/typeck/function_calls/new_abstract_contract.sol
//@ compile-flags: -Ztypeck

abstract contract A {}
contract C {
    function f() public pure {
        new A(); //~ ERROR: cannot instantiate abstract contracts
    }
}
